Delete methods which use KatakanaRepository and HiraganaRepository from HandlerService and add methods which use AlphabetsRepository